--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "atm/abdal",
+    "name": "atma/abdal",
     "description": "This is a sample package used for facade tuto.",
     "type": "library",
     "require": {
@@ -9,7 +9,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Atm\\Abdal\\": "src/"
+            "Atma\\Abdal\\": "src/"
         }
     },
     "authors": [
